--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -26,36 +26,62 @@ hide-when-typing=yes
 
 [colors]
 alpha=0.75
-background=080808
-foreground=ededed
-flash=7f7f00
-flash-alpha=0.5
+# background=080808
+# foreground=ededed
+# flash=7f7f00
+# flash-alpha=0.5
+# 
+# # Normal/regular colors (color palette 0-7)
+# regular0=343434  # black
+# regular1=ff5454  # red
+# regular2=8cc85f  # green
+# regular3=e3c78a  # yellow
+# regular4=80a0ff  # blue
+# regular5=cf87e8  # magenta
+# regular6=79dac8  # cyan
+# regular7=c6c6c6  # white
+# 
+# # Bright colors (color palette 8-15)
+# bright0=949494   # bright black
+# bright1=ff5189   # bright red
+# bright2=36c692   # bright green
+# bright3=c2c292   # bright yellow
+# bright4=74b2ff   # bright blue
+# bright5=ae81ff   # bright magenta
+# bright6=85dc85   # bright cyan
+# bright7=e4e4e4   # bright white
+# 
+# # Misc colors
+# selection-foreground=080808
+# selection-background=b2ceee
+# jump-labels=343434 e3c78a          # black-on-yellow
+# scrollback-indicator=343434 74b2ff  # black-on-bright-blue
+# search-box-no-match=343434 ff5454  # black-on-red
+# search-box-match=343434 e3c78a     # black-on-yellow
+# urls=e3c78a
+foreground = dcd7ba
+background = 000000
 
-# Normal/regular colors (color palette 0-7)
-regular0=343434  # black
-regular1=ff5454  # red
-regular2=8cc85f  # green
-regular3=e3c78a  # yellow
-regular4=80a0ff  # blue
-regular5=cf87e8  # magenta
-regular6=79dac8  # cyan
-regular7=c6c6c6  # white
+selection-foreground = c8c093
+selection-background = 2d4f67
 
-# Bright colors (color palette 8-15)
-bright0=949494   # bright black
-bright1=ff5189   # bright red
-bright2=36c692   # bright green
-bright3=c2c292   # bright yellow
-bright4=74b2ff   # bright blue
-bright5=ae81ff   # bright magenta
-bright6=85dc85   # bright cyan
-bright7=e4e4e4   # bright white
+regular0 = 090618
+regular1 = c34043
+regular2 = 76946a
+regular3 = c0a36e
+regular4 = 7e9cd8
+regular5 = 957fb8
+regular6 = 6a9589
+regular7 = c8c093
 
-# Misc colors
-selection-foreground=080808
-selection-background=b2ceee
-jump-labels=343434 e3c78a          # black-on-yellow
-scrollback-indicator=343434 74b2ff  # black-on-bright-blue
-search-box-no-match=343434 ff5454  # black-on-red
-search-box-match=343434 e3c78a     # black-on-yellow
-urls=e3c78a
+bright0  = 727169
+bright1  = e82424
+bright2  = 98bb6c
+bright3  = e6c384
+bright4  = 7fb4ca
+bright5  = 938aa9
+bright6  = 7aa89f
+bright7  = dcd7ba
+
+16       = ffa066
+17       = ff5d62
