--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -13,45 +13,48 @@ windowrulev2 = float,class:(Spotify)
 windowrulev2 = size 50% 60%,class:(Spotify)
 
 # Floating
-windowrulev2 = float,title:^(Confirm File Replacing)$
-windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = float,class:^(Friends List)$
+windowrulev2 = float,               title:^(Confirm File Replacing)$
+windowrulev2 = float,               class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = float,               class:^(Friends List)$
 
 # Xwayland
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
-windowrulev2 = noblur,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(org.freedesktop.Xwayland)$
-windowrulev2 = noblur,class:^(org.freedesktop.Xwayland)$
-windowrulev2 = opaque,class:^(org.freedesktop.Xwayland)$
+windowrulev2 = noanim,              class:(xwaylandvideobridge)
+windowrulev2 = noinitialfocus,      class:(xwaylandvideobridge)
+windowrulev2 = maxsize 1 1,         class:(xwaylandvideobridge)
+windowrulev2 = noblur,              class:(xwaylandvideobridge)
+windowrulev2 = noanim,              class:(org.freedesktop.Xwayland)
+windowrulev2 = noblur,              class:(org.freedesktop.Xwayland)
+windowrulev2 = opaque,              class:(org.freedesktop.Xwayland)
 
 # osu!
-windowrulev2 = dimaround,class:^(osu!.exe)$
-windowrulev2 = noanim,class:^(osu!.exe)$
-windowrulev2 = noblur,class:^(osu!.exe)$
-windowrulev2 = float,class:^(osu!.exe)$
-windowrulev2 = center,class:^(osu!.exe)$
-windowrulev2 = size 1920 1079,class:^(osu!.exe)$
-windowrulev2 = forceinput,class:^(osu!.exe)$
-windowrulev2 = suppressevent,class:^(osu!.exe)$
-windowrulev2 = opaque,class:^(osu!.exe)$
-windowrulev2 = bordercolor rgb(000000),class:^(osu!.exe)$
+windowrulev2 = dimaround,           class:(osu!.exe)
+windowrulev2 = noanim,              class:(osu!.exe)
+windowrulev2 = noblur,              class:(osu!.exe)
+windowrulev2 = float,               class:(osu!.exe)
+windowrulev2 = center,              class:(osu!.exe)
+windowrulev2 = size 1920 1079,      class:(osu!.exe)
+windowrulev2 = forceinput,          class:(osu!.exe)
+windowrulev2 = suppressevent,       class:(osu!.exe)
+windowrulev2 = opaque,              class:(osu!.exe)
+windowrulev2 = bordercolor rgb(000000), class:(osu!.exe)
 
-## Default workspace for applications
+# Default workspace for applications
 ## Chat Apps
-windowrulev2 = workspace 8 silent,class:(vesktop)
-windowrulev2 = workspace 8 silent,class:(WebCord)
-windowrulev2 = workspace 9 silent,class:(whatsapp-desktop-linux)
+windowrulev2 = workspace 8 silent,  class:(vesktop)
+windowrulev2 = workspace 8 silent,  class:(WebCord)
+windowrulev2 = workspace 9 silent,  class:(whatsapp-desktop-linux)
 
 ## Games
-windowrulev2 = workspace 5,class:(osu!.exe)
-windowrulev2 = workspace 5,class:(osu!)
-windowrulev2 = workspace 5,class:(factorio)
-windowrulev2 = workspace 5,class:(steam_app_*)
+windowrulev2 = workspace 5,         class:(osu!.exe)
+windowrulev2 = workspace 5,         class:(osu!)
+windowrulev2 = workspace 5,         class:(factorio)
+windowrulev2 = workspace 5,         class:(steam_app_*)
+windowrulev2 = workspace 5,         title:^(Dolphin)$
 
 ## Game Launchers
-windowrulev2 = workspace 7 silent,class:^(steam)$
-windowrulev2 = workspace 7 silent,class:^(com.heroicgameslauncher.hgl)$
+windowrulev2 = workspace 7 silent,  class:(steam)
+windowrulev2 = workspace 7 silent,  class:(com.heroicgameslauncher.hgl)
+windowrulev2 = workspace 7 silent,  class:(dolphin-emu)
+
 ## OBS
-windowrulev2 = workspace 6,class:^(com.obsproject.Studio)$
+windowrulev2 = workspace 6,         class:(com.obsproject.Studio)
