--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -4,14 +4,14 @@
 # layerrule = blur,waybar
 # layerrule = blur,wofi
 # layerrule = blur,notifications
-exec = hyprctl setcursor Bibata-Modern-Ice 24
+# exec = hyprctl setcursor Bibata-Modern-Ice 24
 
 general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(a46c3c)
-    col.inactive_border = rgba(303030ff) # gray
+    col.active_border = rgb(42322B)
+    col.inactive_border = rgb(232224)
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
