--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,10 +1,15 @@
-# Set true color
-set -ga terminal-overrides ',xterm-256color:Tc'
 # Enable mouse support
 set -g mouse on
 set -sg escape-time 10
+setw -g mode-keys vi
+set -g status-right " %R "
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
 
 setw -g mode-keys vi
+
+bind r source-file ~/dotfiles/config/tmux/tmux.conf \; display "Config reloaded!"
 
 bind % split-window -h
 bind '"' split-window -v
@@ -17,36 +22,50 @@ bind -n M-l resize-pane -R 5
 # bind Ctrl + F to run a script
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
 
+set -g utf8 on
+set -g status-position top
+set -g status-justify left
+set -g status-left '#[bg=green]#[fg=black]  #S '
+set -g status-left-length 32
+set -g status-bg no
+set -g status-right '#[bg=yellow]#[fg=black] %R '
+set -g status-interval 60
+
+set -g pane-active-border-style fg=green
+set -g pane-border-style fg=black
+
+set -g window-status-format '#[bg=none]#[fg=white] [#I] #W '
+set -g window-status-current-format '#[bg=blue]#[fg=black] [#I] #W '
+
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'niksingh710/minimal-tmux-status'
+# set -g @plugin 'niksingh710/minimal-tmux-status'
 
-set -g pane-border-style "fg=black"
-set -g pane-active-border-style "fg=red"
-set -g status-style "bg=black fg=#080808"
-set -g status-left-style "bg=green fg=#080808"
-set -g status-right-style "bg=yellow fg=#080808"
+# set -g pane-border-style "fg=black"
+# set -g pane-active-border-style "fg=green"
+# set -g status-style "bg=black fg=black"
+# set -g status-left-style "bg=green fg=black"
+# set -g status-right-style "bg=yellow fg=black"
 
 # These are the default values used inside the plugin to achieve the preview shown above.
-set -g @minimal-tmux-bg "blue"
-set -g @minimal-tmux-justify "left"
-# set -g @minimal-tmux-indicator-str ""
-set -g @minimal-tmux-indicator true
-set -g @minimal-tmux-status "top"
-
-# Enables or disables the left and right status bar
-set -g @minimal-tmux-right true
-set -g @minimal-tmux-left true
-
-#on all tabs (default is false)
-# false will make it visible for the current tab only
-set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
-
-# Not recommended to change these values
-set -g @minimal-tmux-status-left "  #S "
-# clock on the right
-set -g @minimal-tmux-status-right " %R "
+# set -g @minimal-tmux-bg "blue"
+# set -g @minimal-tmux-justify "left"
+# # set -g @minimal-tmux-indicator-str ""
+# set -g @minimal-tmux-indicator true
+# set -g @minimal-tmux-status "top"
+#
+# # Enables or disables the left and right status bar
+# set -g @minimal-tmux-right true
+# set -g @minimal-tmux-left true
+#
+# #on all tabs (default is false)
+# # false will make it visible for the current tab only
+# set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
+#
+# # Not recommended to change these values
+# set -g @minimal-tmux-status-left "  #S "
+# # clock on the right
 
 run '~/.config/tmux/plugins/tpm/tpm'
