--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -47,8 +47,8 @@ windowrulev2 = workspace 9 silent,  class:(whatsapp-desktop-linux)
 ## Games
 windowrulev2 = workspace 5,         class:(osu!.exe)
 windowrulev2 = workspace 5,         class:(osu!)
-windowrulev2 = workspace 5,         class:(factorio)
-windowrulev2 = workspace 5,         class:(steam_app_*)
+windowrulev2 = workspace 5,         class:^(factorio)$
+windowrulev2 = workspace 5,         class:^(steam_app_*)$
 windowrulev2 = workspace 5,         title:^(Dolphin)$
 
 ## Game Launchers
