--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -10,8 +10,8 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(42322B)
-    col.inactive_border = rgb(232224)
+    col.active_border = rgb(BF7C53)
+    col.inactive_border = rgb(0B0A0A)
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
