--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -5,7 +5,7 @@ font-bold-italic=Maple Mono NF:size=13:style=Bold Italic
 font-size-adjustment=0.5
 line-height=15
 box-drawings-uses-font-glyphs=no
-dpi-aware=no
+dpi-aware=yes
 pad=8x4                             # optionally append 'center'
 
 [url]
