--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -52,6 +52,8 @@ windowrulev2 = workspace 5,             class:^(steam_app_)(.*)$
 windowrulev2 = fullscreen,              class:^(steam_app_)(.*)$
 windowrulev2 = workspace 5,             title:^(Dolphin)$
 windowrulev2 = fullscreen,              title:^(Dolphin)$
+windowrulev2 = workspace 5,             title:^(tetrio-desktop)$
+windowrulev2 = fullscreen,              title:^(tetrio-desktop)$
 
 ## Game Launchers
 windowrulev2 = workspace 7 silent,      class:^(steam)$
