--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -10,7 +10,7 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(BF7C53)
+    col.active_border = rgb(6d8a44)
     col.inactive_border = rgb(0B0A0A)
 }
 
@@ -55,5 +55,5 @@ workspace = 8, layoutopt:orientation:top
 workspace = 9, layoutopt:orientation:top
 master {
     allow_small_split = true
-    new_is_master = false
+    # new_is_master = false
 }
