--- a/config/hypr/hyprland/devices.conf
+++ b/config/hypr/hyprland/devices.conf
@@ -1,11 +1,11 @@
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     # keyboard
-    kb_layout = us,es
-    kb_options = grp:win_space_toggle
-    kb_variant =
-    kb_model =
-    kb_rules =
+    # kb_layout = us,es
+    # kb_options = grp:win_space_toggle
+    # kb_variant =
+    # kb_model =
+    # kb_rules =
     repeat_delay = 300
     repeat_rate = 30
 
@@ -36,10 +36,10 @@ input {
     # }
 }
 
-device {
-    name = at-translated-set-2-keyboard
-    kb_options = caps:swapescape
-}
+# device {
+#     name = at-translated-set-2-keyboard
+#     kb_options = caps:swapescape
+# }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 gestures {
