--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -70,10 +70,9 @@ bind = $modc, W, exec, killall hyprpaper && hyprpaper
 bind = ALT, Tab, cyclenext,
 bind = ALT, Tab, bringactivetotop,
 
-$WOBSOCK = /run/user/1000/wob.sock
-binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ && wpctl get-volume @DEFAULT_AUDIO_SINK@ | sed 's/[^0-9]//g' > /tmp/wobpipe
-binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%- && wpctl get-volume @DEFAULT_AUDIO_SINK@ | sed 's/[^0-9]//g' > /tmp/wobpipe
-bind =, XF86AudioMute,         exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && (wpctl get-volume @DEFAULT_AUDIO_SINK@ | grep -q MUTED && echo 0 > $WOBSOCK) || wpctl get-volume @DEFAULT_AUDIO_SINK@ > /tmp/wobpipe
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
+binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+bind =, XF86AudioMute,         exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 # Move focus with mod + vim motions
 bind = $mod, h, movefocus, l
