--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -52,8 +52,10 @@ windowrulev2 = workspace 5,             class:^(steam_app_)(.*)$
 windowrulev2 = fullscreen,              class:^(steam_app_)(.*)$
 windowrulev2 = workspace 5,             title:^(Dolphin)$
 windowrulev2 = fullscreen,              title:^(Dolphin)$
-windowrulev2 = workspace 5,             title:^(tetrio-desktop)$
-windowrulev2 = fullscreen,              title:^(tetrio-desktop)$
+windowrulev2 = workspace 5,             class:^(tetrio-desktop)$
+windowrulev2 = fullscreen,              class:^(tetrio-desktop)$
+windowrulev2 = workspace 5,             class:^(cs2)$
+windowrulev2 = fullscreen,              class:^(cs2)$
 
 ## Game Launchers
 windowrulev2 = workspace 7 silent,      class:^(steam)$
