--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -10,7 +10,7 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(6d8a44)
+    col.active_border = rgb(BF7C53)
     col.inactive_border = rgb(0B0A0A)
 }
 
