--- a/config/tofi/config
+++ b/config/tofi/config
@@ -22,7 +22,7 @@ padding-right = 0
 
 input-color = #fefefe
 default-result-color = #8A8A7E
-selection-background = #6d8a44
+selection-background = #BF7C53
 selection-color = #E7EDE6
 selection-background-padding = 4, 4
 input-background-padding = 4, 4
