--- a/config/hypr/hyprland/displays.conf
+++ b/config/hypr/hyprland/displays.conf
@@ -3,7 +3,7 @@
 monitor = DP-1,     1920x1080@390, 1080x420, 1
 monitor = DP-2,     1920x1080@60,  3000x420, 1
 monitor = DP-3,     1920x1080@60,  0x0,      1, transform, 1
-monitor = HDMI-A-1, 1920x1080@60,  4920x420, 1.5
+monitor = HDMI-A-1, 1920x1080@60,  4920x420, 1, mirror, DP-2
 
 monitor = ,     preferred,     auto,     auto
 
@@ -18,4 +18,3 @@ workspace = 6, monitor:DP-2, persistent:true
 workspace = 7, monitor:DP-2, persistent:true
 workspace = 8, monitor:DP-3, persistent:true
 workspace = 9, monitor:DP-3, persistent:true
-
