--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -7,16 +7,16 @@
 # exec = hyprctl setcursor Bibata-Modern-Ice 24
 
 general {
-    gaps_in = 3
-    gaps_out = 6
-    border_size = 2
-    col.active_border = rgb(C34043)
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 1
+    col.active_border = rgb(76946A)
     col.inactive_border = rgb(8A8A7E)
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
-    rounding = 5
+    rounding = 0
     blur {
         enabled = true
         size = 4
