--- a/config/hypr/hyprland/config.conf
+++ b/config/hypr/hyprland/config.conf
@@ -1,5 +1,5 @@
 general {
-    layout = dwindle
+    layout = master
 }
 
 binds {
@@ -51,4 +51,5 @@ workspace = 9, layoutopt:orientation:top
 master {
     allow_small_split = true
     # new_is_master = false
+    mfact = 0.5
 }
