--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -10,8 +10,8 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(76946A)
-    col.inactive_border = rgb(8A8A7E)
+    col.active_border = rgb(C34043)
+    col.inactive_border = rgb(303030)
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
