--- a/config/tofi/config
+++ b/config/tofi/config
@@ -21,9 +21,9 @@ padding-left = 0
 padding-right = 0
 
 input-color = #fefefe
-default-result-color = #8A8A7E
-selection-background = #76946A
-selection-color = #E7EDE6
+default-result-color = #303030
+selection-background = #C34043
+selection-color = #FEFEFE
 selection-background-padding = 4, 4
 input-background-padding = 4, 4
 alternate-result-background-padding = 4, 4
