--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -49,8 +49,12 @@ bind = $mod,  R,      exec, $runner
 bind = $mod,  E,      exec, $fileManager
 bind = $mod,  I,      exec, $browser
 
-$ss_region = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
-$ss_screen = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -o -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
+# $ss_region = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
+# $ss_screen = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -o -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
+
+$ss_region = grimblast --freeze copy area
+$ss_screen = grimblast --freeze copysave output
+
 bind = $mods, S,      exec, $ss_region
 bind = $modc, S,      exec, $ss_screen
 
