--- a/config/hypr/hyprland/config.conf
+++ b/config/hypr/hyprland/config.conf
@@ -28,6 +28,8 @@ misc {
     vrr = 1
     initial_workspace_tracking = 0
     font_family = Maple Mono NF
+    enable_swallow = true
+    swallow_regex = ^(foot)$
 }
 
 xwayland {
