--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -29,7 +29,7 @@ decoration {
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 animations {
-    enabled = false
+    enabled = true
     animation = windowsIn,   1, 5, default
     animation = windowsOut,  1, 8, default, popin 80%
     animation = windowsMove, 1, 5, default
