--- a/config/tofi/config
+++ b/config/tofi/config
@@ -1,10 +1,10 @@
 anchor = bottom
 width = 100%
-height = 17
+height = 14
 horizontal = true
 prompt-text = "  "
-font = "Torus SemiBold"
-font-size = 9
+font = "IBM Plex Mono Medium"
+font-size = 7
 hint-font = true
 outline-width = 0
 border-width = 0
