--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -10,8 +10,6 @@ $terminal = foot
 $runner = tofi-drun --drun-launch=true
 $browser = flatpak run org.mozilla.firefox
 $fileManager = $terminal -e lf
-$ss_region = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
-$ss_screen = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -o -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
 
 $mod  = SUPER
 $mods = SUPER_SHIFT
@@ -49,11 +47,11 @@ bind = $mod,  R,      exec, $runner
 bind = $mod,  E,      exec, $fileManager
 bind = $mod,  I,      exec, $browser
 
-# $ss_region = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
-# $ss_screen = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -o -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
+$ss_region = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
+$ss_screen = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -o -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
 
-$ss_region = grimblast --freeze copy area
-$ss_screen = grimblast --freeze copysave output
+# $ss_region = grimblast --freeze copy area
+# $ss_screen = grimblast --freeze copysave output
 
 bind = $mods, S,      exec, $ss_region
 bind = $modc, S,      exec, $ss_screen
