--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -12,8 +12,8 @@ windowrulev2 = float,                   class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 50% 60%,            class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,                   class:^(Bitwarden)$
 windowrulev2 = size 50% 60%,            class:^(Bitwarden)$
-windowrulev2 = float,                   class:^(Spotify)$
-windowrulev2 = size 50% 60%,            class:^(Spotify)$
+windowrulev2 = float,                   class:^(spotube)$
+windowrulev2 = size 50% 65%,            class:^(spotube)$
 
 # Floating
 windowrulev2 = float,                   title:^(Confirm File Replacing)$
