--- a/config/hypr/hyprland/displays-laptop.conf
+++ b/config/hypr/hyprland/displays-laptop.conf
@@ -7,8 +7,8 @@ workspace = 3, monitor:eDP-1, persistent:true
 workspace = 4, monitor:eDP-1, persistent:true
 workspace = 5, monitor:eDP-1, persistent:true
 
-#       name,     WxH@Hz,        position, scale
-monitor = HDMI-A-1, highrr, 0x0, 1
-monitor = eDP-1,    1920x1080@60, auto, 1.25
+#       name,       WxH@Hz,     position,   scale
+monitor = HDMI-A-1, highrr,     0x0,        1
+monitor = eDP-1,    highrr,     auto,       1.25
 
-monitor = ,     preferred,     auto,     auto
+monitor = ,         preferred,  auto,       auto
