--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -5,8 +5,8 @@
 # Theme
 env = QT_QPA_PLATFORMTHEME,qt6ct
 # env = GTK_THEME,adw-gtk3-custom
-# env = ICON_THEME,Papirus-Dark
-# env = XCURSOR_THEME,Bibata-Modern-Ice
+env = ICON_THEME,Papirus-Dark
+env = XCURSOR_THEME,Bibata-Modern-Ice
 
 env = SDL_VIDEODRIVER,xcb
 env = GDK_BACKEND,wayland,x11,*
