--- a/config/hypr/hyprland/config.conf
+++ b/config/hypr/hyprland/config.conf
@@ -31,10 +31,10 @@ misc {
     swallow_regex = ^(foot)$
 }
 
-# render {
-#     direct_scanout = false
-#     explicit_sync = false
-# }
+render {
+    direct_scanout = false
+    explicit_sync = true
+}
 
 xwayland {
     force_zero_scaling = true
@@ -56,6 +56,6 @@ workspace = 8, layoutopt:orientation:top
 workspace = 9, layoutopt:orientation:top
 master {
     allow_small_split = true
-    # new_is_master = false
+    new_status = master
     mfact = 0.5
 }
