--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -4,13 +4,16 @@
 
 # Theme
 env = QT_QPA_PLATFORMTHEME,qt6ct
-# env = GTK_THEME,adw-gtk3-custom
+env = GTK_THEME,adw-gtk3-custom
 env = ICON_THEME,Papirus-Dark
 env = XCURSOR_THEME,Bibata-Modern-Ice
+env = XCURSOR_SIZE,24
 
 env = SDL_VIDEODRIVER,xcb
-env = GDK_BACKEND,wayland,x11,*
 env = CLUTTER_BACKEND,wayland
+
+#GTK
+env = GDK_BACKEND,wayland,x11,*
 
 # XDG
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -18,9 +21,8 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
 # Qt
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_QPA_PLATFORM,xcb
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 # Electron
@@ -38,3 +40,4 @@ env = MOZ_DBUS_REMOTE,1
 env = MOZ_ACCELERATED,1
 env = MOZ_WEBRENDERER,1
 env = SAL_USE_VCLPLUGIN,qt5
+env = _NV_DISABLE_EXPLICIT_SYNC,0
