--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -8,7 +8,7 @@
 $terminal = foot
 # $runner = wofi -a
 $runner = tofi-drun --drun-launch=true
-$browser = flatpak run org.mozilla.firefox
+$browser = flatpak run io.gitlab.librewolf-community
 $fileManager = $terminal -e lf
 
 $mod  = SUPER
