--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -31,6 +31,7 @@ windowrulev2 = opaque,                  class:^(org.freedesktop.Xwayland)$
 # Default workspace for applications
 ## Chat Apps
 windowrulev2 = workspace 8 silent,      class:^(vesktop)$
+windowrulev2 = workspace 8 silent,      class:^(com.discordapp.Discord)$
 windowrulev2 = workspace 9 silent,      class:^(whatsapp-desktop-linux)$
 windowrulev2 = workspace 9 silent,      class:^(WhatSie)$
 windowrulev2 = workspace 9 silent,      class:^(ZapZap)$
