--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -1,7 +1,11 @@
+exec-once = pipewire
+exec-once = pipewire-pulse
+exec-once = wireplumber
 exec-once = hyprpaper
 exec-once = waybar
-exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = wl-paste --type text --watch cliphist store     # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store    # Stores only image data
+exec-once = wl-clip-persist --clipboard both
 exec-once = udiskie -s
 exec-once = wl-gammarelay-rs
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -9,4 +13,3 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
 exec-once = otd-daemon
 exec-once = nextcloud --background
-exec-once = wl-clip-persist --clipboard both
