--- a/config/hypr/hyprland/nvidia.conf
+++ b/config/hypr/hyprland/nvidia.conf
@@ -1,25 +1,22 @@
 # Nvidia
-# env = NVD_BACKEND,direct
-# env = EGL_PLATFORM,wayland
-# env = ECORE_EVAS_ENGINE,wayland_egl
-# env = ELM_ENGINE,wayland_egl
-# env = LIBVA_DRIVER_NAME,nvidia
-# env = GBM_BACKEND,nvidia-drm
-# env = _JAVA_AWT_WM_NONREPARENTING,1
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# env = __GL_VRR_ALLOWED,1
-# env = __GL_GSYNC_ALLOWED,1
-# env = WLR_USE_LIBINPUT,1
-# env = __NV_PRIME_RENDER_OFFLOAD,1
-
-env = NVD_BACKEND,direct
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
+env = LIBVA_DRIVER_NAME,nvidia
+env = NVD_BACKEND,direct
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GL_GSYNC_ALLOWED,1
+env = __GL_VRR_ALLOWED,0
+# env = AQ_NO_ATOMIC,1      # not recommended
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = XDG_SESSION_TYPE,wayland
+
+env = EGL_PLATFORM,wayland
+env = ECORE_EVAS_ENGINE,wayland_egl
+env = ELM_ENGINE,wayland_egl
+env = WLR_USE_LIBINPUT,1
+env = _JAVA_AWT_WM_NONREPARENTING,1
+env = __NV_PRIME_RENDER_OFFLOAD,1
 
 opengl {
-    nvidia_anti_flicker = false
+    nvidia_anti_flicker = true
     force_introspection = 0
 }
