--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -8,8 +8,8 @@ windowrulev2 = noblur, title:^()$, class:^()$
 windowrulev2 = suppressevent maximize,  class:.*
 
 # Scratchpads
-windowrulev2 = float,                   class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 50% 60%,            class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,                   class:^(com.saivert.pwvucontrol)$
+windowrulev2 = size 50% 60%,            class:^(com.saivert.pwvucontrol)$
 windowrulev2 = float,                   class:^(Bitwarden)$
 windowrulev2 = size 50% 60%,            class:^(Bitwarden)$
 windowrulev2 = float,                   class:^(spotube)$
@@ -52,6 +52,8 @@ windowrulev2 = fullscreen,              class:^(osu!.exe)$
 
 ## Game Launchers
 windowrulev2 = workspace 7 silent,      class:^(steam)$
+windowrulev2 = workspace 7 silent,      class:^(battle.net.exe)$
+windowrulev2 = workspace 7 silent,      class:^(bottles)$
 windowrulev2 = workspace 7 silent,      class:^(com.heroicgameslauncher.hgl)$
 windowrulev2 = workspace 7 silent,      class:^(dolphin-emu)$
 
