--- a/config/btop/btop.conf
+++ b/config/btop/btop.conf
@@ -57,7 +57,7 @@ update_ms = 2000
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "cpu lazy"
+proc_sorting = "cpu direct"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -72,7 +72,7 @@ proc_colors = True
 proc_gradient = True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core = True
+proc_per_core = False
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
@@ -187,7 +187,7 @@ disk_free_priv = False
 show_io_stat = True
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
-io_mode = True
+io_mode = False
 
 #* Set to True to show combined read/write io graphs in io mode.
 io_graph_combined = False
@@ -202,10 +202,10 @@ net_download = 100
 net_upload = 100
 
 #* Use network graphs auto rescaling mode, ignores any values set above and rescales down to 10 Kibibytes at the lowest.
-net_auto = False
+net_auto = True
 
 #* Sync the auto scaling for download and upload to whichever currently has the highest scale.
-net_sync = False
+net_sync = True
 
 #* Starts with the Network Interface specified here.
 net_iface = ""
