--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -1,6 +1,3 @@
-exec-once = pipewire
-exec-once = pipewire-pulse
-exec-once = wireplumber
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = wl-paste --type text --watch cliphist store     # Stores only text data
@@ -11,5 +8,5 @@ exec-once = wl-gammarelay-rs
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
-exec-once = otd-daemon
+# exec-once = otd-daemon
 exec-once = nextcloud --background
