--- a/config/hypr/hyprland/nvidia.conf
+++ b/config/hypr/hyprland/nvidia.conf
@@ -1,5 +1,5 @@
 # Nvidia
-env = GBM_BACKEND,nvidia-drm
+# env = GBM_BACKEND,nvidia-drm
 env = LIBVA_DRIVER_NAME,nvidia
 env = NVD_BACKEND,direct
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
