--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -9,7 +9,7 @@ env = ICON_THEME,Papirus-Dark
 env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
 
-env = SDL_VIDEODRIVER,wayland
+# env = SDL_VIDEODRIVER,x11
 env = CLUTTER_BACKEND,wayland
 
 #GTK
@@ -33,11 +33,11 @@ env = XDG_SESSION_TYPE,wayland
 
 # Others
 env = _JAVA_AWT_WM_NONREPARENTING,1
-# env = MOZ_ENABLE_WAYLAND,1
-# env = MOZ_DISABLE_RDD_SANDBOX,1
-# env = MOZ_WAYLAND_USE_VAAPI,1
-# env = MOZ_DBUS_REMOTE,1
-# env = MOZ_ACCELERATED,1
-# env = MOZ_WEBRENDERER,1
+env = MOZ_ENABLE_WAYLAND,1
+env = MOZ_DISABLE_RDD_SANDBOX,1
+env = MOZ_WAYLAND_USE_VAAPI,1
+env = MOZ_DBUS_REMOTE,1
+env = MOZ_ACCELERATED,1
+env = MOZ_WEBRENDERER,1
 env = SAL_USE_VCLPLUGIN,qt5
 env = _NV_DISABLE_EXPLICIT_SYNC,0
