--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -1,4 +1,4 @@
-# l -> locked, aka. works also when an input inhibitor (e.g. a lockscreen) is active.
+# l -> locked, aka. works also when an input inhibitor (e.g. a lockscreen) is active.key
 # r -> release, will trigger on release of a key.
 # e -> repeat, will repeat when held.
 # n -> non-consuming, key/mouse events will be passed to the active window in addition to triggering the dispatcher.
@@ -8,7 +8,7 @@
 $terminal = foot
 # $runner = wofi -a
 $runner = tofi-drun --drun-launch=true
-$browser = flatpak run io.gitlab.librewolf-community
+$browser = zen-browser
 $fileManager = $terminal -e lf
 
 $mod  = SUPER
