--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,5 +1,3 @@
-layerrule    = noanim,                  wofi
-layerrule    = blur,                    wofi
 layerrule    = blur,                    waybar
 layerrule    = noanim,                  launcher
 
@@ -8,8 +6,8 @@ windowrulev2 = noblur, title:^()$, class:^()$
 windowrulev2 = suppressevent maximize,  class:.*
 
 # Scratchpads
-windowrulev2 = float,                   class:^(com.saivert.pwvucontrol)$
-windowrulev2 = size 50% 60%,            class:^(com.saivert.pwvucontrol)$
+windowrulev2 = float,                   class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 50% 60%,            class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,                   class:^(Bitwarden)$
 windowrulev2 = size 50% 60%,            class:^(Bitwarden)$
 windowrulev2 = float,                   class:^(spotube)$
@@ -43,18 +41,28 @@ windowrulev2 = workspace 5,             title:^(Dolphin)$
 windowrulev2 = fullscreen,              title:^(Dolphin)$
 windowrulev2 = workspace 5,             class:^(tetrio-desktop)$
 windowrulev2 = fullscreen,              class:^(tetrio-desktop)$
+windowrulev2 = workspace 5,             class:^(rocketleague.exe)$
+windowrulev2 = fullscreen,              class:^(rocketleague.exe)$
+windowrulev2 = workspace 5,             class:^(fallguys_client_game.exe)$
+windowrulev2 = fullscreen,              class:^(fallguys_client_game.exe)$
 windowrulev2 = workspace 5,             class:^(cs2)$
 windowrulev2 = fullscreen,              class:^(cs2)$
 windowrulev2 = workspace 5,             class:^(osu!)$
 windowrulev2 = fullscreen,              class:^(osu!)$
 windowrulev2 = workspace 5,             class:^(osu!.exe)$
 windowrulev2 = fullscreen,              class:^(osu!.exe)$
+windowrulev2 = workspace 5,             class:^(sc2_x64.exe)$
+windowrulev2 = fullscreen,              class:^(sc2_x64.exe)$
 
 ## Game Launchers
 windowrulev2 = workspace 7 silent,      class:^(steam)$
 windowrulev2 = workspace 7 silent,      class:^(battle.net.exe)$
-windowrulev2 = workspace 7 silent,      class:^(bottles)$
+windowrulev2 = float,                   class:^(battle.net.exe)$
+windowrulev2 = float,                   class:^(battle.net.exe)$
+windowrulev2 = workspace 7 silent,      class:^(explorer.exe)$
+windowrulev2 = workspace 7 silent,      class:^(com.usebottles.bottles)$
 windowrulev2 = workspace 7 silent,      class:^(com.heroicgameslauncher.hgl)$
+windowrulev2 = workspace 7 silent,      class:^(heroic)$
 windowrulev2 = workspace 7 silent,      class:^(dolphin-emu)$
 
 ## OBS
