--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -35,7 +35,7 @@
             "hyprland/window"
         ],
         "modules-right": [
-            "group/group-tray",
+            "tray",
             "battery",
             "hyprland/language",
             "clock#date",
