--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -8,7 +8,7 @@
 $terminal = foot
 # $runner = wofi -a
 $runner = tofi-drun --drun-launch=true
-$browser = zen-browser
+$browser = io.github.zen_browser.zen
 $fileManager = $terminal -e lf
 
 $mod  = SUPER
