--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -32,6 +32,7 @@ windowrulev2 = workspace 8 silent,      class:^(vesktop)$
 windowrulev2 = workspace 8 silent,      class:^(com.discordapp.Discord)$
 windowrulev2 = workspace 9 silent,      class:^(whatsapp-desktop-linux)$
 windowrulev2 = workspace 9 silent,      class:^(WhatSie)$
+windowrulev2 = workspace 9 silent,      class:^(com.rtosta.zapzap)$
 windowrulev2 = workspace 9 silent,      class:^(ZapZap)$
 
 ## Games
