--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -8,6 +8,8 @@ env = GTK_THEME,adw-gtk3-custom
 env = ICON_THEME,Papirus-Dark
 env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,24
 
 # env = SDL_VIDEODRIVER,x11
 env = CLUTTER_BACKEND,wayland
