--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,5 +7,5 @@ source = ./hyprland/devices.conf
 source = ./hyprland/keybinds.conf
 
 source = ./hyprland/rules.conf
-source = ./hyprland/nvidia.conf
+# source = ./hyprland/nvidia.conf
 source = ./hyprland/autostart.conf
