--- a/config/hypr/hyprland/config.conf
+++ b/config/hypr/hyprland/config.conf
@@ -8,7 +8,7 @@ binds {
 }
 
 cursor {
-    no_hardware_cursors = true
+    no_hardware_cursors = false
     enable_hyprcursor = true
     default_monitor = DP-1
 }
@@ -32,7 +32,8 @@ misc {
 
 render {
     direct_scanout = false
-    explicit_sync = false
+    explicit_sync = 2
+    explicit_sync_kms = 2
 }
 
 xwayland {
