--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -10,3 +10,6 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
 exec-once = otd-daemon
 exec-once = nextcloud --background
+exec-once = flatpak run dev.vencord.Vesktop 
+exec-once = flatpak run com.rtosta.zapzap
+exec-once = flatpak run org.mozilla.Thunderbird
