--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -59,10 +59,18 @@ windowrulev2 = workspace 5,             class:^(portal2_linux)$
 windowrulev2 = fullscreen,              class:^(portal2_linux)$
 windowrulev2 = workspace 5,             class:^(factorio)$
 windowrulev2 = fullscreen,              class:^(factorio)$
+windowrulev2 = workspace 5,             class:^(supertuxkart)$
+windowrulev2 = fullscreen,              class:^(supertuxkart)$
+windowrulev2 = workspace 5,             class:^(supertux2)$
+windowrulev2 = fullscreen,              class:^(supertux2)$
+windowrulev2 = workspace 5,             class:^(sober)$
+windowrulev2 = fullscreen,              class:^(sober)$
 
 
 ## Game Launchers
 windowrulev2 = workspace 7 silent,      class:^(steam)$
+windowrulev2 = workspace 7 silent,      title:^(Steam)$
+windowrulev2 = workspace 7 silent,      class:^(Minecraft Launcher)$
 windowrulev2 = workspace 7 silent,      class:^(battle.net.exe)$
 windowrulev2 = float,                   class:^(battle.net.exe)$
 windowrulev2 = float,                   class:^(battle.net.exe)$
