--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -10,8 +10,8 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(7daea3)
-    col.inactive_border = rgb(404040)
+    col.active_border = rgb(83a598)
+    col.inactive_border = rgb(3c3836)
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -25,6 +25,7 @@ decoration {
     drop_shadow = false
     shadow_range = 0
     shadow_render_power = 0
+    dim_special = 0.5
 }
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
