--- a/config/tofi/config
+++ b/config/tofi/config
@@ -21,9 +21,9 @@ padding-left = 0
 padding-right = 0
 
 input-color = #fefefe
-default-result-color = #404040
-selection-background = #7daea3
-selection-color = #fbf1c7
+default-result-color = #3c3836
+selection-background = #83a598
+selection-color = #ebdbb2
 selection-background-padding = 4, 4
 input-background-padding = 4, 4
 alternate-result-background-padding = 4, 4
