--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -8,7 +8,7 @@
 $terminal = foot
 # $runner = wofi -a
 $runner = tofi-drun --drun-launch=true
-$browser = librewolf
+$browser = flatpak run io.gitlab.librewolf-community
 $fileManager = $terminal -e lf
 
 $mod  = SUPER
@@ -33,14 +33,6 @@ bind = $modc, N, exec, $night_top
 bind = $mod,  N, exec, $night_mid
 bind = $mods, N, exec, $night_low
 
-bind = $mods, D, exec, hyprctl keyword monitor HDMI-A-1,1920x1080@60,0x420,1
-bind = $modc, D, exec, hyprctl keyword monitor disabled
-
-bind = $mods, Z, exec, hyprctl keyword decoration:screen_shader "$(find $HOME/.config/hypr/shaders/ | sed -n '2,$p' | tofi)"
-bind = $modc, Z, exec, hyprctl keyword decoration:screen_shader "[[EMPTY]]"
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-
 # Programs
 bind = $mod,  RETURN, exec, $terminal
 bind = $mod,  R,      exec, $runner
@@ -61,6 +53,11 @@ bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
 bind = $mod, P, exec, $hyprscripts/scratchpads.sh password
 bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
 bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
+
+bind = $mod,  Y, exec, book -o youtube
+bind = $mods, Y, exec, book youtube
+bind = $mod,  S, exec, book -o sites
+bind = $mods, S, exec, book sites
 
 # Actions
 bind = $modc, Q, exit
