--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,5 +1,7 @@
 layerrule    = blur,                    waybar
+layerrule    = blur,                    launcher
 layerrule    = noanim,                  launcher
+layerrule    = dimaround,               launcher
 
 windowrulev2 = noblur, title:^()$, class:^()$ 
 
