remove firefox and ags

--- a/config/hypr/hyprland/config.conf
+++ b/config/hypr/hyprland/config.conf
@@ -26,8 +26,8 @@ misc {
     vfr = true
     vrr = 2
     initial_workspace_tracking = 0
-    enable_swallow = true
-    swallow_regex = ^(foot)$
+    # enable_swallow = true
+    # swallow_regex = ^(foot)$
 }
 
 render {
