--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -8,8 +8,9 @@
 $terminal = foot
 # $runner = wofi -a
 $runner = tofi-drun --drun-launch=true
-$browser = flatpak run io.gitlab.librewolf-community
+$browser = librewolf
 $fileManager = $terminal -e lf
+$rssReader = $terminal -e newsboat
 
 $mod  = SUPER
 $mods = SUPER_SHIFT
@@ -38,15 +39,15 @@ bind = $mod,  RETURN, exec, $terminal
 bind = $mod,  R,      exec, $runner
 bind = $mod,  E,      exec, $fileManager
 bind = $mod,  I,      exec, $browser
-
-$ss_region = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
-$ss_screen = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -o -d)" $IMG && wl-copy < $IMG && notify-send --icon="$IMG" "Screenshot copied!" "$IMG"
+bind = $mod,  U,      exec, $rssReader
 
 # $ss_region = grimblast --freeze copy area
 # $ss_screen = grimblast --freeze copysave output
 
-bind = $mods, S,      exec, $ss_region
-bind = $modc, S,      exec, $ss_screen
+$ss_region = screenshot
+$ss_screen = screenshot -f
+
+bind = $modc, S, exec, $ss_region
 
 $hyprscripts= ~/.config/hypr/scripts
 bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
@@ -107,16 +108,16 @@ bind = $mod, 9, workspace, 9
 bind = $mod, 0,workspace, 10
 
 # Move active window to a workspace with mod + SHIFT + [0-9]
-bind = $mods, 1, movetoworkspace, 1
-bind = $mods, 2, movetoworkspace, 2
-bind = $mods, 3, movetoworkspace, 3
-bind = $mods, 4, movetoworkspace, 4
-bind = $mods, 5, movetoworkspace, 5
-bind = $mods, 6, movetoworkspace, 6
-bind = $mods, 7, movetoworkspace, 7
-bind = $mods, 8, movetoworkspace, 8
-bind = $mods, 9, movetoworkspace, 9
-bind = $mods, 0, movetoworkspace, 10
+bind = $mods, 1, movetoworkspacesilent, 1
+bind = $mods, 2, movetoworkspacesilent, 2
+bind = $mods, 3, movetoworkspacesilent, 3
+bind = $mods, 4, movetoworkspacesilent, 4
+bind = $mods, 5, movetoworkspacesilent, 5
+bind = $mods, 6, movetoworkspacesilent, 6
+bind = $mods, 7, movetoworkspacesilent, 7
+bind = $mods, 8, movetoworkspacesilent, 8
+bind = $mods, 9, movetoworkspacesilent, 9
+bind = $mods, 0, movetoworkspacesilent, 10
 
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
