--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,86 +1,102 @@
-layerrule    = blur,                    waybar
-layerrule    = blur,                    launcher
-layerrule    = noanim,                  launcher
-layerrule    = dimaround,               launcher
+# Layer rules
+layerrule = blur,      waybar
+layerrule = blur,      launcher
+layerrule = noanim,    launcher
+layerrule = dimaround, launcher
 
 windowrulev2 = noblur, title:^()$, class:^()$ 
-
 windowrulev2 = suppressevent maximize,  class:.*
 
 # Scratchpads
-windowrulev2 = float,                   class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 50% 60%,            class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float,                   class:^(Bitwarden)$
-windowrulev2 = size 50% 60%,            class:^(Bitwarden)$
-windowrulev2 = float,                   class:^(spotube)$
-windowrulev2 = size 50% 65%,            class:^(spotube)$
+windowrulev2 = size 50% 60%, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 50% 60%, class:^(Bitwarden)$
+windowrulev2 = size 50% 65%, class:^(spotube)$
 
 # Floating
-windowrulev2 = float,                   title:^(Confirm File Replacing)$
-windowrulev2 = float,                   class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = float,                   class:^(Friends List)$
+windowrulev2 = float, title:^(Confirm File Replacing)$
+windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = float, class:^(Friends List)$
+windowrulev2 = float, class:^(battle.net.exe)$
+windowrulev2 = float, class:^(spotube)$
+windowrulev2 = float, class:^(Bitwarden)$
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 
 # Xwayland
-windowrulev2 = noinitialfocus,          class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1,             class:^(xwaylandvideobridge)$
-windowrulev2 = noblur,                  class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,                  class:^(org.freedesktop.Xwayland)$
-windowrulev2 = noblur,                  class:^(org.freedesktop.Xwayland)$
-windowrulev2 = opaque,                  class:^(org.freedesktop.Xwayland)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,    class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,         class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,         class:^(org.freedesktop.Xwayland)$
+windowrulev2 = noblur,         class:^(org.freedesktop.Xwayland)$
+windowrulev2 = opaque,         class:^(org.freedesktop.Xwayland)$
+
+# Fullscreen
+windowrulev2 = fullscreen, class:^(steam_app_)(.*)$
+windowrulev2 = fullscreen, title:^(Dolphin)$
+windowrulev2 = fullscreen, class:^(tetrio-desktop)$
+windowrulev2 = fullscreen, class:^(sober)$
+windowrulev2 = fullscreen, class:^(supertux2)$
+windowrulev2 = fullscreen, class:^(supertuxkart)$
+windowrulev2 = fullscreen, class:^(factorio)$
+windowrulev2 = fullscreen, class:^(portal2_linux)$
+windowrulev2 = fullscreen, class:^(sc2_x64.exe)$
+windowrulev2 = fullscreen, class:^(osu!.exe)$
+windowrulev2 = fullscreen, class:^(osu!)$
+windowrulev2 = fullscreen, title:^(Counter-Strike 2)$
+windowrulev2 = fullscreen, class:^(cs2)$
+windowrulev2 = fullscreen, class:^(fallguys_client_game.exe)$
+windowrulev2 = fullscreen, class:^(rocketleague.exe)$
 
 # Default workspace for applications
-## Chat Apps
-windowrulev2 = workspace 4 silent,      class:^(org.mozilla.Thunderbird)$
-windowrulev2 = workspace 8 silent,      class:^(vesktop)$
-windowrulev2 = workspace 8 silent,      class:^(com.discordapp.Discord)$
-windowrulev2 = workspace 9 silent,      class:^(whatsapp-desktop-linux)$
-windowrulev2 = workspace 9 silent,      class:^(com.rtosta.zapzap)$
 
-## Games
-windowrulev2 = workspace 5,             class:^(steam_app_)(.*)$
-windowrulev2 = fullscreen,              class:^(steam_app_)(.*)$
-windowrulev2 = workspace 5,             title:^(Dolphin)$
-windowrulev2 = fullscreen,              title:^(Dolphin)$
-windowrulev2 = workspace 5,             class:^(tetrio-desktop)$
-windowrulev2 = fullscreen,              class:^(tetrio-desktop)$
-windowrulev2 = workspace 5,             class:^(rocketleague.exe)$
-windowrulev2 = fullscreen,              class:^(rocketleague.exe)$
-windowrulev2 = workspace 5,             class:^(fallguys_client_game.exe)$
-windowrulev2 = fullscreen,              class:^(fallguys_client_game.exe)$
-windowrulev2 = workspace 5,             class:^(cs2)$
-windowrulev2 = fullscreen,              class:^(cs2)$
-windowrulev2 = workspace 5,             title:^(Counter-Strike 2)$
-windowrulev2 = fullscreen,              title:^(Counter-Strike 2)$
-windowrulev2 = workspace 5,             class:^(osu!)$
-windowrulev2 = fullscreen,              class:^(osu!)$
-windowrulev2 = workspace 5,             class:^(osu!.exe)$
-windowrulev2 = fullscreen,              class:^(osu!.exe)$
-windowrulev2 = workspace 5,             class:^(sc2_x64.exe)$
-windowrulev2 = fullscreen,              class:^(sc2_x64.exe)$
-windowrulev2 = workspace 5,             class:^(portal2_linux)$
-windowrulev2 = fullscreen,              class:^(portal2_linux)$
-windowrulev2 = workspace 5,             class:^(factorio)$
-windowrulev2 = fullscreen,              class:^(factorio)$
-windowrulev2 = workspace 5,             class:^(supertuxkart)$
-windowrulev2 = fullscreen,              class:^(supertuxkart)$
-windowrulev2 = workspace 5,             class:^(supertux2)$
-windowrulev2 = fullscreen,              class:^(supertux2)$
-windowrulev2 = workspace 5,             class:^(sober)$
-windowrulev2 = fullscreen,              class:^(sober)$
+## 3
+windowrulev2 = workspace 3, class:^(com.stremio.stremio)$
 
+## 4
+# Email
+windowrulev2 = workspace 4 silent, class:^(org.mozilla.Thunderbird)$
+
+
+## 5
+# Games
+windowrulev2 = workspace 5, class:^(steam_app_)(.*)$
+windowrulev2 = workspace 5, title:^(Dolphin)$
+windowrulev2 = workspace 5, class:^(tetrio-desktop)$
+windowrulev2 = workspace 5, class:^(rocketleague.exe)$
+windowrulev2 = workspace 5, class:^(fallguys_client_game.exe)$
+windowrulev2 = workspace 5, class:^(cs2)$
+windowrulev2 = workspace 5, title:^(Counter-Strike 2)$
+windowrulev2 = workspace 5, class:^(osu!)$
+windowrulev2 = workspace 5, class:^(osu!.exe)$
+windowrulev2 = workspace 5, class:^(sc2_x64.exe)$
+windowrulev2 = workspace 5, class:^(portal2_linux)$
+windowrulev2 = workspace 5, class:^(factorio)$
+windowrulev2 = workspace 5, class:^(supertuxkart)$
+windowrulev2 = workspace 5, class:^(supertux2)$
+windowrulev2 = workspace 5, class:^(sober)$
+
+## 6
+# OBS
+windowrulev2 = workspace 6, class:^(com.obsproject.Studio)$
 
 ## Game Launchers
-windowrulev2 = workspace 7 silent,      class:^(steam)$
-windowrulev2 = workspace 7 silent,      title:^(Steam)$
-windowrulev2 = workspace 7 silent,      class:^(Minecraft Launcher)$
-windowrulev2 = workspace 7 silent,      class:^(battle.net.exe)$
-windowrulev2 = float,                   class:^(battle.net.exe)$
-windowrulev2 = float,                   class:^(battle.net.exe)$
-windowrulev2 = workspace 7 silent,      class:^(explorer.exe)$
-windowrulev2 = workspace 7 silent,      class:^(com.usebottles.bottles)$
-windowrulev2 = workspace 7 silent,      class:^(com.heroicgameslauncher.hgl)$
-windowrulev2 = workspace 7 silent,      class:^(heroic)$
-windowrulev2 = workspace 7 silent,      class:^(dolphin-emu)$
+## 7
+windowrulev2 = workspace 7 silent, class:^(steam)$
+windowrulev2 = workspace 7 silent, title:^(Steam)$
+windowrulev2 = workspace 7 silent, class:^(Minecraft Launcher)$
+windowrulev2 = workspace 7 silent, class:^(battle.net.exe)$
+windowrulev2 = workspace 7 silent, class:^(explorer.exe)$
+windowrulev2 = workspace 7 silent, class:^(com.usebottles.bottles)$
+windowrulev2 = workspace 7 silent, class:^(com.heroicgameslauncher.hgl)$
+windowrulev2 = workspace 7 silent, class:^(heroic)$
+windowrulev2 = workspace 7 silent, class:^(dolphin-emu)$
 
-## OBS
-windowrulev2 = workspace 6,             class:^(com.obsproject.Studio)$
+## 8
+# Discord
+windowrulev2 = workspace 8 silent, class:^(vesktop)$
+windowrulev2 = workspace 8 silent, class:^(com.discordapp.Discord)$
+
+## 9
+# Whatsapp
+windowrulev2 = workspace 9 silent, class:^(whatsapp-desktop-linux)$
+windowrulev2 = workspace 9 silent, class:^(com.rtosta.zapzap)$
+
