--- a/config/hypr-laptop/hyprland.conf
+++ b/config/hypr-laptop/hyprland.conf
@@ -1,5 +1,5 @@
 source = ~/.config/hypr/hyprland/envoirment.conf
-source = ~/.config/hypr/hyprland/nvidia.conf
+# source = ~/.config/hypr/hyprland/nvidia.conf
 source = ~/.config/hypr/hyprland/config.conf
 
 # env = WLR_DRM_DEVICES,$HOME/.config/hypr/card
