--- a/config/hypr/hyprland/devices.conf
+++ b/config/hypr/hyprland/devices.conf
@@ -36,10 +36,10 @@ input {
     # }
 }
 
-# device {
-#     name = at-translated-set-2-keyboard
-#     kb_options = caps:swapescape
-# }
+device {
+    name = at-translated-set-2-keyboard
+    kb_options = grp:win_space_toggle,caps:swapescape
+}
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 gestures {
