--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -10,8 +10,8 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(83a598)
-    col.inactive_border = rgb(3c3836)
+    col.active_border = rgb(7daea3)
+    col.inactive_border = rgb(555555)
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
