--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -5,17 +5,25 @@
 # t -> transparent, cannot be shadowed by other binds.
 # i -> ignore mods, will ignore modifiers.
 
-$terminal = foot
-# $runner = wofi -a
-$runner = tofi-drun --drun-launch=true
-$browser = zen-browser
-$fileManager = $terminal -e lf
-$rssReader = $terminal -e newsboat
-
 $mod  = SUPER
 $mods = SUPER_SHIFT
 $modc = SUPER_CTRL
 $moda = SUPER_ALT
+
+$terminal = foot
+$runner = tofi-drun --drun-launch=true
+$browser = zen-browser
+$fileManager = $terminal -e lf
+$rssReader = $terminal -e newsboat
+$calculator = flatpak run org.gnome.Calculator
+
+# Programs
+bind = $mod,  RETURN, exec, $terminal
+bind = $mod,  R,      exec, $runner
+bind = $mod,  E,      exec, $fileManager
+bind = $mod,  I,      exec, $browser
+bind = $mod,  U,      exec, $rssReader
+bind = $mod,  C,      exec, $calculator
 
 $bctl = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay
 
@@ -33,13 +41,6 @@ bind = $mods, B, exec, $bright_top
 bind = $modc, N, exec, $night_top
 bind = $mod,  N, exec, $night_mid
 bind = $mods, N, exec, $night_low
-
-# Programs
-bind = $mod,  RETURN, exec, $terminal
-bind = $mod,  R,      exec, $runner
-bind = $mod,  E,      exec, $fileManager
-bind = $mod,  I,      exec, $browser
-bind = $mod,  U,      exec, $rssReader
 
 # $ss_region = grimblast --freeze copy area
 # $ss_screen = grimblast --freeze copysave output
