--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -20,6 +20,7 @@ windowrulev2 = float, class:^(battle.net.exe)$
 windowrulev2 = float, class:^(spotube)$
 windowrulev2 = float, class:^(Bitwarden)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, class:^(org.gnome.Calculator)$
 
 # Xwayland
 windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
