--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -16,6 +16,7 @@ $browser = zen-browser
 $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
+$cliphist = cliphist list | cut -d' ' -f2- | tofi | wl-copy
 
 # Programs
 bind = $mod,  RETURN, exec, $terminal
@@ -41,6 +42,7 @@ bind = $mods, B, exec, $bright_top
 bind = $modc, N, exec, $night_top
 bind = $mod,  N, exec, $night_mid
 bind = $mods, N, exec, $night_low
+bind = $mods, P, exec, $cliphist
 
 # $ss_region = grimblast --freeze copy area
 # $ss_screen = grimblast --freeze copysave output
