--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,5 +1,5 @@
 # Layer rules
-layerrule = blur,      waybar
+#layerrule = blur,      waybar
 layerrule = blur,      launcher
 layerrule = noanim,    launcher
 layerrule = dimaround, launcher
